test/field/get_on_num.lox
123.foo // error: only instances have field
